# Fractals

./: .gitignore  .gitmodules  CMakeLists.txt  build.sh  readme.md  video.sh
src/: Algorithm.cpp  Algorithm.h  Export.cpp  Export.h  Vector.h  benchmark.cpp  benchmark.h  main.cpp
